# cowfish

./: .coveragerc  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sqs_test.py
.github/workflows/: pythonpackage.yml
cowfish/: __init__.py  cloudwatch.py  dynamodb.py  firehose.py  kinesis.py  pool.py  sqs.py  sqsprocesser.py  sqsworker.py  utils.py  worker.py
examples/: firehose_bench.py  sample.json  sqs_test.py
tests/: conftest.py  mock_server.py  test_dynamodb.py  test_firehose.py  test_kinesis.py  test_pool.py  test_sqs.py  test_sqsprocesser.py  test_worker.py
