[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.poetry]
name = "cowfish"
version = "0.3.1"
description = "A useful asynchronous library built on top of aiobotocore"
authors = ["Gu Yingbo <tensiongyb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
moto = "^1.3.14"
aiobotocore = ">=1.0.0"
pytest = "^5.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
